# G4LL_JB

./: .gitignore  CMakeLists.txt  lampslow.cc
Ana/: make_dE_E_root.cc
include/: lampslowDetectorConstruction.hh  lampslowPrimaryGeneratorAction.hh
src/: SiCsISD.cc  lampslowDetectorConstruction.cc  lampslowEventAction.cc  lampslowPrimaryGeneratorAction.cc  lampslowPrimaryGeneratorAction.cc.bak
